added styles and shop sections

--- a/index.html
+++ b/index.html
@@ -53,21 +53,23 @@
     </div>
     <!-- intro bo'limi tugadi -->
     <!-- styles bo'limi -->
-    <section class="styles container styles-container">
-        <ul class="styles-list">
-            <li class="styles-item">
-                <img src="img/styles-sunshine.svg" alt="sunshine text">
-            </li>
-            <li class="styles-item">
-                <img src="img/styles-pure.svg" alt="pure text">
-            </li>
-            <li class="styles-item">
-                <img src="img/styles-automotive.svg" alt="automotive text">
-            </li>
-            <li class="styles-item">
-                <img src="img/styles-hand-craftedx.svg" alt="hand-craftedx text"> 
-            </li>
-        </ul>
+    <section class="styles container">
+        <div class="styles-container">
+            <ul class="styles-list">
+                <li class="styles-item">
+                    <img src="img/styles-sunshine.svg" alt="sunshine text">
+                </li>
+                <li class="styles-item">
+                    <img src="img/styles-pure.svg" alt="pure text">
+                </li>
+                <li class="styles-item">
+                    <img src="img/styles-automotive.svg" alt="automotive text">
+                </li>
+                <li class="styles-item">
+                    <img src="img/styles-hand-craftedx.svg" alt="hand-craftedx text"> 
+                </li>
+            </ul>
+        </div>
         <div class="styles-contents-wrapper">
             <img src="img/styles-kalonka.png" alt="kalonka">
             <div class="styles-text-wrapper">
@@ -86,5 +88,26 @@
         </div>
     </section>
     <!-- styles bo'limi tugadi -->
+    <!-- shop bo'limi -->
+    <section class="shop container">
+        <div class="shop-text-wrapper">
+            <div>
+                <p class="shop-text">Get up to 20% off Today Only!</p>
+                <h3 class="shop-title">THE 4K HDR COMPACT DRONE</h3>
+                <a class="shop-link" href="#">Show Now</a>
+            </div>
+            <img src="img/shop-drone.png" width="255" height="231" alt="THE 4K HDR COMPACT DRONE">
+        </div>
+        <div class="shop-text-wrapper">
+            <div>
+                <p class="shop-text">Get up to 30% off Today Only!</p>
+                <h3 class="shop-title">THE 4K HDR COMPACT Camera</h3>
+                <a class="shop-link" href="#">Show Now</a>
+            </div>
+            <img src="img/shop-camera.png" width="238" alt="THE 4K HDR COMPACT Camera">
+        </div>
+        
+    </section>
+    <!-- shop bo'limi tugadi -->
 </body>
 </html>
