--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <a class="header-icons" href="#"><img src="img/odam.svg" alt="odam-img"></a>
                 </li>
             </ul>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, culpa.</p>
         </div>
     </header>
     <!-- header bo'limi tugadi -->
@@ -106,8 +107,21 @@
             </div>
             <img src="img/shop-camera.png" width="238" alt="THE 4K HDR COMPACT Camera">
         </div>
-        
     </section>
     <!-- shop bo'limi tugadi -->
+    <!-- about for products bo'limi -->
+    <section class="products container">
+        <p class="products-text">about Products</p>
+        <h2 class="products-title">About For Products</h2>
+        <p class="products-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly have suffered believable. <br><br>If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
+        <ul class="products-list">
+            <li class="products-iten">There are many variations of passages of Lorem Ipsum</li>
+            <li class="products-iten">There are many variations of passages of Lorem  Embarrassing middle of text.</li>
+            <li class="products-iten">There are many variations of passages of Lorem Ipsum</li>
+            <li class="products-iten">There are many variations of passages.</li>
+            <li class="products-iten">There are many variations of passages.</li>
+        </ul>
+    </section>
+    <!-- about for products bo'limi tugadi -->
 </body>
 </html>
